--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
         type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6700044052824169"
+     crossorigin="anonymous"></script>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
