--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+  <meta name="keywords" content="Saara surprises, surprises, decoration,saara surprises,decoration in tirupur,surprises in tirupur">
     <meta name="google-site-verification" content="JuodF4qS3GRbhZQrM6POtwAL9A4Pmcofedk1jNYlrW0" />
     <title>Saara Surprises</title>
     <!-- Favicon-->
